0022932: Memory leak in math_FunctionRoots.cxx line 254